--- a/vinovibe/package.json
+++ b/vinovibe/package.json
@@ -2,11 +2,12 @@
   "name": "vinovibe",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+       "ng": "ng",
+      "start": "ng serve",
+      "build": "ng build",
+      "watch": "ng build --watch --configuration development",
+      "test": "ng test",
+      "vercel-build": "npm install && npm run build"
   },
   "private": true,
   "dependencies": {
