--- a/vinovibe/package.json
+++ b/vinovibe/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "vercel-build": "npm install && npm run build"
   },
   "private": true,
   "dependencies": {
