--- a/vinovibe/package.json
+++ b/vinovibe/package.json
@@ -1,12 +1,12 @@
 {
   "name": "vinovibe",
   "version": "0.0.0",
-  "scripts": {
+ "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
