--- a/vinovibe/.github/workflows/deploy.yml
+++ b/vinovibe/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Build Angular project
-        run: npm run build -- --configuration production
+        run: npx ng build --configuration production
 
       - name: Deploy to Vercel
         env:
