--- a/vinovibe/.github/workflows/deploy.yml
+++ b/vinovibe/.github/workflows/deploy.yml
@@ -1,10 +1,7 @@
-name: Deploy to Vercel
+name: Deploy to Vercel (Improved)
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -13,26 +10,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3  # Checkout code
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3  # Set up Node.js
         with:
-          node-version: '20'
-
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli
+          node-version: '16'  # Recommended LTS version
 
       - name: Install dependencies
-        run: npm install
+        run: npm install  # Install project dependencies
+
+      - name: Install Angular CLI globally (if necessary)
+        run: npm install -g @angular/cli  # Install Angular CLI only if needed
 
       - name: Build Angular project
-        run: npx ng build --configuration production
+        run: ng build --configuration=production  # Use the correct build command
 
       - name: Deploy to Vercel
         env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}  # Access Vercel token
         run: |
-          npm install -g vercel
+          npm install -g vercel  # Install Vercel CLI if not already present
           npx vercel --prod --token=$VERCEL_TOKEN
