--- a/vinovibe/.github/workflows/deploy.yml
+++ b/vinovibe/.github/workflows/deploy.yml
@@ -21,18 +21,18 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli
-
       - name: Install dependencies
         run: npm install
 
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
+
       - name: Build Angular project
-        run: ng build --configuration production
+        run: npx ng build --configuration production
 
       - name: Deploy to Vercel
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         run: |
           npm install -g vercel
-          vercel --prod --token=$VERCEL_TOKEN
+          npx vercel --prod --token=$VERCEL_TOKEN
