--- a/vinovibe/package.json
+++ b/vinovibe/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.6",
     "@sweetalert2/ngx-sweetalert2": "^12.4.0",
+    "crypto-js": "^4.2.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.2",
     "tslib": "^2.3.0",
@@ -28,6 +29,7 @@
     "@angular-devkit/build-angular": "^18.0.5",
     "@angular/cli": "^18.0.5",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
