--- a/vinovibe/tsconfig.json
+++ b/vinovibe/tsconfig.json
@@ -17,6 +17,7 @@
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "module": "ES2022",
     "useDefineForClassFields": false,
     "lib": [
